--- a/.github/workflows/nod-js.yml
+++ b/.github/workflows/nod-js.yml
@@ -61,7 +61,7 @@ jobs:
 
     - name: Run Node.js script
       run: |
-        if [[ ! -s proxies.txt ]]; then
+        if [[ ! -s proxy.txt ]]; then
           echo "Error: proxies.txt is empty or missing." >&2
           exit 1
         fi
